<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
     <LinearLayout
        android:id="@+id/lvWishhProperty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/textView1"
             style="@style/RobotoTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="16dp"
            android:text="@string/OoopsWish" />
        
         <TextView
            android:id="@+id/textView2"
             style="@style/RobotoTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/sign_in_tvcolor"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textSize="16dp"
            android:text="@string/adding" />
         
          <TextView
            android:id="@+id/textView3"
             style="@style/RobotoTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="@color/sign_in_tvcolor"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textSize="16dp"
            android:text="@string/filter" />
        
    </LinearLayout>
    
    
     <android.support.v7.widget.RecyclerView
            android:id="@+id/rvWishProjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp" />

</LinearLayout>
