<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/checkoutlandmark"
                    android:contentDescription="@string/imageDesc" />

                <Spinner
                    android:id="@+id/spinnerSelectCity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:dropDownVerticalOffset="32dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/bedroom"
                    android:contentDescription="@string/imageDesc"
                    android:gravity="center" />

                <TextView
                    style="@style/RobotoTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/bedrooms"
                    android:textColor="@color/sidePanelGray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lvMinusBedroomsss"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/oval"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/tvMinusBedrooms"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="-"
                            android:textColor="@color/sidePanelGray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/ovel_orange"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/tvIncrementBedrooms"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="2"
                            android:textColor="@color/WHITE"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lvPlusBedroomsss"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/oval"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/tvPlusBedrooms"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="+"
                            android:textColor="@color/sidePanelGray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/bathroom"
                    android:contentDescription="@string/imageDesc"
                    android:gravity="center" />

                <TextView
                    style="@style/RobotoTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/bathroom"
                    android:textColor="@color/sidePanelGray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lvMinusBathrooms"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/oval"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/tvMinusBathrooms"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="-"
                            android:textColor="@color/sidePanelGray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/ovel_orange"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/tvIncrementBathrooms"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="2"
                            android:textColor="@color/WHITE"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lvPlusBathrooms"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/oval"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/tvPlusBathrooms"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="+"
                            android:textColor="@color/sidePanelGray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/RobotoTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Property type"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/lvCheckBoxSerach"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                style="@style/RobotoTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/priceRange"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/seekbar_Range"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>