<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        style="@style/RobotoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Fragment #X"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        xmlns:cv="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvWishListProperty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        cv:cardElevation="7dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp" >

                <ImageView
                    android:id="@+id/ivWishProperty"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/geadient"
                    android:contentDescription="@string/imageDesc"
                    android:scaleType="fitXY"
                    android:src="@drawable/dummy_image" />

                <ImageView
                    android:id="@+id/ivWishList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/imageDesc"
                    android:src="@drawable/heart_pink" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvWishPropertyId"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvWishCNo"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvWishBhktype"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvWishAppartment"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvWishArea"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvWishRs"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:singleLine="true"
                        android:text="@string/icon_Rs"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvWishPrice"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:layout_marginRight="7dp"
                        android:gravity="end"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvWishAddress"
                    style="@style/RobotoTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/wishPageText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvWishOnwards"
                    style="@style/RobotoTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_weight="0"
                    android:gravity="end"
                    android:text=""
                    android:textColor="@color/wishPageText"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvWishAreaCounting"
                    style="@style/RobotoTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_weight="0"
                    android:gravity="end"
                    android:text=""
                    android:textColor="@color/wishPageText"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="5dp"
                android:background="@color/wishPageText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tvWishFname"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:layout_marginStart="7dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvWishLname"
                            style="@style/RobotoTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginStart="3dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvWishAType"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="3dp"
                        android:text=""
                        android:textColor="@color/wishPageText"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvWishMsgIcon"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:text="@string/icon_msg"
                        android:textColor="@color/wishPageText"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="0.05dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginBottom="1dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="7dp"
                        android:background="@color/wishPageText" />

                    <TextView
                        android:id="@+id/tvWishCallIcon"
                        style="@style/RobotoTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="7dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/icon_call"
                        android:textColor="#27BD57"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>